--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
                  <source src="movie.ogg" type="video/ogg">
                   Your browser does not support the video tag.
                 </video>-->
-			   	<li style="background-image: url(images/tankt62.png);">
+			   	<li style="background-image: url(folders/tankt62.jpg);">
 			   		<div class="overlay-gradient"></div>
 			   		<div class="container">
 			   			<div class="col-md-8 col-md-offset-2 col-md-push-4 js-fullheight slider-text">
@@ -127,7 +127,7 @@
 			   			</div>
 			   		</div>
 			   	</li>
-			   	<li style="background-image: url(images/livingroomrender2copy.png);">
+			   	<li style="background-image: url(folders/livingroomrender2copy.jpg);">
 			   		<div class="overlay-gradient"></div>
 			   		<div class="container">
 			   			<div class="col-md-8 col-md-offset-2 col-md-push-4 js-fullheight slider-text">
@@ -138,7 +138,7 @@
 			   			</div>
 			   		</div>
 			   	</li>
-			   	<li style="background-image: url(images/image.png);">
+			   	<li style="background-image: url(folders/image.jpg);">
 			   		<div class="overlay-gradient"></div>
 			   		<div class="container">
 			   			<div class="col-md-8 col-md-offset-2 col-md-push-4 js-fullheight slider-text">
@@ -217,28 +217,28 @@
 				</div>-->
 				<div class="row">
 					<div class="col-md-6 text-center animate-box">
-						<div class="work" style="background-image: url(images/t62tank.png);">
+						<div class="work" style="background-image: url(folders/t62tank.jpg);">
 							<a href="#" class="view">
 								<span>View Demo</span>
 							</a>
 						</div>
 					</div>
 					<div class="col-md-6 text-center animate-box">
-						<div class="work" style="background-image: url(images/t62tanks.png);">
+						<div class="work" style="background-image: url(folders/t62tanks.jpg);">
 							<a href="#" class="view">
 								<span>View Demo</span>
 							</a>
 						</div>
 					</div>
 					<div class="col-md-6 text-center animate-box">
-						<div class="work" style="background-image: url(images/scarrender3.png);">
+						<div class="work" style="background-image: url(folders/scarrender3.jpg);">
 							<a href="#" class="view">
 								<span>View Demo</span>
 							</a>
 						</div>
 					</div>
 					<div class="col-md-6 text-center animate-box">
-						<div class="work" style="background-image: url(images/screenshot_3.png);">
+						<div class="work" style="background-image: url(folders/screenshot_3.jpg);">
 							<a href="#" class="view">
 								<span>View Demo</span>
 							</a>
@@ -274,28 +274,28 @@
 						</div>
 					</div>
 					<div class="col-md-7 text-center animate-box">
-						<div class="work" style="background-image: url(images/awprenderback4.png);">
+						<div class="work" style="background-image: url(folders/awprenderback4.jpg);">
 							<a href="#" class="view">
 								<span>View Demo</span>
 							</a>
 						</div>
 					</div>
 					<div class="col-md-5 text-center animate-box">
-						<div class="work" style="background-image: url(images/mech.png);">
+						<div class="work" style="background-image: url(folders/mech.jpg);">
 							<a href="#" class="view">
 								<span>View Demo</span>
 							</a>
 						</div>
 					</div>
 					<div class="col-md-5 text-center animate-box">
-						<div class="work" style="background-image: url(images/house.jpg);">
+						<div class="work" style="background-image: url(folders/house.jpg);">
 							<a href="#" class="view">
 								<span>View Demo</span>
 							</a>
 						</div>
 					</div>
 					<div class="col-md-7 text-center animate-box">
-						<div class="work" style="background-image: url(images/st2.png);">
+						<div class="work" style="background-image: url(folders/st2.jpg);">
 							<a href="#" class="view">
 								<span>View Demo</span>
 							</a>
