--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
 <!--[if gt IE 8]><!--> <html class="no-js"> <!--<![endif]-->
 	<head>
-	<link rel="icon" href="folders/revolver.png">
+	<link rel="icon" href="folders/revolver.png" type="image/x-icon"> <link rel="shortcut icon" href="(URL of the favicon)" type="image/x-icon">
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<title>Gunarch &mdash; Gunarch web</title>
